--- a/readme
+++ b/readme
@@ -1,7 +1,7 @@
 #######################################################
 # 框架版本：python3.6.8 + selenium 3.141.0
 # 作者：yueyunpeng
-# 说明：本测试框架针对于固定资产PC端自动化测试定制开发
+# 说明：本测试框架针对于特定产品PC端自动化测试定制开发
 #######################################################
 
 # 采用PO模型四层架构
