--- a/readme
+++ b/readme
@@ -1,6 +1,6 @@
 #######################################################
 # 框架版本：python3.6.8 + selenium 3.141.0
-# 作者：yueyunpeng
+# 作者：cloudyue
 #######################################################
 
 # 采用PO模型四层架构
